Bug 389595 - Crash when choosing "Remember application association" in "Open With" dialog
Summary: Crash when choosing "Remember application association" in "Open With" dialog
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 17.08.1
Platform: Microsoft Windows All
: VHI crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-29 13:02 UTC by Dinescu Stefan
Modified: 2018-02-12 08:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.44
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dinescu Stefan 2018-01-29 13:02:32 UTC
Trying to open a file in an external editor by using "Open With" dialog, with "Remember application association" checked, will never finish and if the user chooses to cancel the action, the application will crash.

Steps to reproduce: 
1. Open any file inside Kate
2. Access "Open With" dialog, either by File/Open With, or by right clicking on a document inside "Documents" plugin
3. Check the "Remember application association" box
4. Click OK; a dialog "Updating system configuration..." appears and will never complete
5. Press Cancel in the "Updating system configuration..." dialog
Comment 1 Kåre Särs 2018-01-29 13:22:42 UTC
Thanks for the report!

I can reproduce...
Comment 2 Dominik Haumann 2018-02-04 20:48:35 UTC
Backtrace:

#0  0x00007ffff117f8c7 in raise () from /lib64/libc.so.6
#1  0x00007ffff1180c9a in abort () from /lib64/libc.so.6
#2  0x00007ffff1e29dae in QMessageLogger::fatal(char const*, ...) const () from /usr/lib64/libQt5Core.so.5
#3  0x00007ffff1e250c6 in qt_assert(char const*, char const*, int) () from /usr/lib64/libQt5Core.so.5
#4  0x00007ffff71b73a6 in KOpenWithDialogPrivate::addToMimeAppsList (this=0x17774e0, serviceId=...) at /home/dh/kde/kf5/src/frameworks/kio/src/widgets/kopenwithdialog.cpp:828
#5  0x00007ffff71b86f0 in KOpenWithDialogPrivate::checkAccept (this=0x17774e0) at /home/dh/kde/kf5/src/frameworks/kio/src/widgets/kopenwithdialog.cpp:989
#6  0x00007ffff71b880c in KOpenWithDialog::accept (this=0x7fffffffafe0) at /home/dh/kde/kf5/src/frameworks/kio/src/widgets/kopenwithdialog.cpp:1002
#7  0x00007ffff71b8bef in KOpenWithDialog::qt_static_metacall (_o=0x7fffffffafe0, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7fffffffa1d0)
    at /home/dh/kde/kf5/build/frameworks/kio/src/widgets/moc_kopenwithdialog.cpp:98
#8  0x00007ffff20283df in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQt5Core.so.5
#9  0x00007ffff3635af8 in ?? () from /usr/lib64/libQt5Widgets.so.5
#10 0x00007ffff20283df in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQt5Core.so.5
#11 0x00007ffff359f6b2 in QAbstractButton::clicked(bool) () from /usr/lib64/libQt5Widgets.so.5
#12 0x00007ffff359f8ba in ?? () from /usr/lib64/libQt5Widgets.so.5
#13 0x00007ffff35a0db3 in ?? () from /usr/lib64/libQt5Widgets.so.5
#14 0x00007ffff35a0f25 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/libQt5Widgets.so.5
#15 0x00007ffff34eb577 in QWidget::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#16 0x00007ffff34af71c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#17 0x00007ffff34b6b9c in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#18 0x00007ffff1ffe115 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#19 0x00007ffff34b5a19 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/libQt5Widgets.so.5
#20 0x00007ffff3503a6f in ?? () from /usr/lib64/libQt5Widgets.so.5
#21 0x00007ffff3505f83 in ?? () from /usr/lib64/libQt5Widgets.so.5
#22 0x00007ffff34af71c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#23 0x00007ffff34b6500 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#24 0x00007ffff1ffe115 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#25 0x00007ffff2d1008d in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib64/libQt5Gui.so.5
#26 0x00007ffff2d11c45 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib64/libQt5Gui.so.5
#27 0x00007ffff2cf06bb in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Gui.so.5
#28 0x00007fffe7038c9b in ?? () from /usr/lib64/libQt5XcbQpa.so.5
#29 0x00007ffff1ffc83b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#30 0x00007ffff368af1f in QDialog::exec() () from /usr/lib64/libQt5Widgets.so.5
#31 0x000000000044874d in KateMainWindow::slotOpenWithMenuAction (this=0xac70f0, a=0x1511190) at /home/dh/kde/kf5/src/kde/applications/kate/kate/katemainwindow.cpp:855
Comment 3 Dominik Haumann 2018-02-04 20:56:45 UTC
Bug #356506 is probably a duplicate of this report from year 2015.

I can reproduce the crash under Linux, btw...
Comment 4 Dominik Haumann 2018-02-04 21:02:21 UTC
@dfaure: Can you see anything useful in the backtrace in kio?

This is most likely a bug that is very old.
Comment 5 David Faure 2018-02-12 08:46:31 UTC
Git commit f06403a4f43361d23722503fd0d5734641ea8119 by David Faure.
Committed on 12/02/2018 at 08:46.
Pushed by dfaure into branch 'master'.

Fix assert when cancelling the rebuild-ksycoca dialog.
FIXED-IN: 5.44

M  +1    -1    src/widgets/kopenwithdialog.cpp

https://commits.kde.org/kio/f06403a4f43361d23722503fd0d5734641ea8119