Fix assert when cancelling the rebuild-ksycoca dialog.

BUG: 389595
FIXED-IN: 5.44